tests/negative/ModuleNotInScope.juvix
module ModuleNotInScope;

    module A;
    end;

    axiom M : Type;

    open M;


end;
